implementação e teste de CORS da aplicação