@@ -5,94 +5,94 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import java.util.List;
 
-import github.com._mk.data.dto.v1.PersonDTO;
-import github.com._mk.model.Person;
+import github.com._mk.data.dto.PersonDTO;
 import github.com._mk.unittests.mapper.mocks.MockPerson;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
+import github.com._mk.model.Person;
 
 public class ObjectMapperTests {
-	MockPerson inputObject;
+    MockPerson inputObject;
 
-	@BeforeEach
-	public void setUp() {
-		inputObject = new MockPerson();
-	}
+    @BeforeEach
+    public void setUp() {
+        inputObject = new MockPerson();
+    }
 
-	@Test
-	public void parseEntityToDTOTest() {
-		PersonDTO output = parseObject(inputObject.mockEntity(), PersonDTO.class);
-		assertEquals(Long.valueOf(0L), output.getId());
-		assertEquals("First Name Test0", output.getFirstName());
-		assertEquals("Last Name Test0", output.getLastName());
-		assertEquals("Address Test0", output.getAddress());
-		assertEquals("Male", output.getGender());
-	}
+    @Test
+    public void parseEntityToDTOTest() {
+        PersonDTO output = parseObject(inputObject.mockEntity(), PersonDTO.class);
+        assertEquals(Long.valueOf(0L), output.getId());
+        assertEquals("First Name Test0", output.getFirstName());
+        assertEquals("Last Name Test0", output.getLastName());
+        assertEquals("Address Test0", output.getAddress());
+        assertEquals("Male", output.getGender());
+    }
 
-	@Test
-	public void parseEntityListToDTOListTest() {
-		List<PersonDTO> outputList = parseListObjects(inputObject.mockEntityList(), PersonDTO.class);
-		PersonDTO outputZero = outputList.getFirst();
+    @Test
+    public void parseEntityListToDTOListTest() {
+        List<PersonDTO> outputList = parseListObjects(inputObject.mockEntityList(), PersonDTO.class);
+        PersonDTO outputZero = outputList.get(0);
 
-		assertEquals(Long.valueOf(0L), outputZero.getId());
-		assertEquals("First Name Test0", outputZero.getFirstName());
-		assertEquals("Last Name Test0", outputZero.getLastName());
-		assertEquals("Address Test0", outputZero.getAddress());
-		assertEquals("Male", outputZero.getGender());
+        assertEquals(Long.valueOf(0L), outputZero.getId());
+        assertEquals("First Name Test0", outputZero.getFirstName());
+        assertEquals("Last Name Test0", outputZero.getLastName());
+        assertEquals("Address Test0", outputZero.getAddress());
+        assertEquals("Male", outputZero.getGender());
 
-		PersonDTO outputSeven = outputList.get(7);
+        PersonDTO outputSeven = outputList.get(7);
 
-		assertEquals(Long.valueOf(7L), outputSeven.getId());
-		assertEquals("First Name Test7", outputSeven.getFirstName());
-		assertEquals("Last Name Test7", outputSeven.getLastName());
-		assertEquals("Address Test7", outputSeven.getAddress());
-		assertEquals("Female", outputSeven.getGender());
+        assertEquals(Long.valueOf(7L), outputSeven.getId());
+        assertEquals("First Name Test7", outputSeven.getFirstName());
+        assertEquals("Last Name Test7", outputSeven.getLastName());
+        assertEquals("Address Test7", outputSeven.getAddress());
+        assertEquals("Female", outputSeven.getGender());
 
-		PersonDTO outputTwelve = outputList.get(12);
+        PersonDTO outputTwelve = outputList.get(12);
 
-		assertEquals(Long.valueOf(12L), outputTwelve.getId());
-		assertEquals("First Name Test12", outputTwelve.getFirstName());
-		assertEquals("Last Name Test12", outputTwelve.getLastName());
-		assertEquals("Address Test12", outputTwelve.getAddress());
-		assertEquals("Male", outputTwelve.getGender());
-	}
+        assertEquals(Long.valueOf(12L), outputTwelve.getId());
+        assertEquals("First Name Test12", outputTwelve.getFirstName());
+        assertEquals("Last Name Test12", outputTwelve.getLastName());
+        assertEquals("Address Test12", outputTwelve.getAddress());
+        assertEquals("Male", outputTwelve.getGender());
+    }
 
-	@Test
-	public void parseDTOToEntityTest() {
-		Person output = parseObject(inputObject.mockDTO(), Person.class);
-		assertEquals(Long.valueOf(0L), output.getId());
-		assertEquals("First Name Test0", output.getFirstName());
-		assertEquals("Last Name Test0", output.getLastName());
-		assertEquals("Address Test0", output.getAddress());
-		assertEquals("Male", output.getGender());
-	}
+    @Test
+    public void parseDTOToEntityTest() {
+        Person output = parseObject(inputObject.mockDTO(), Person.class);
+        assertEquals(Long.valueOf(0L), output.getId());
+        assertEquals("First Name Test0", output.getFirstName());
+        assertEquals("Last Name Test0", output.getLastName());
+        assertEquals("Address Test0", output.getAddress());
+        assertEquals("Male", output.getGender());
+    }
 
-	@Test
-	public void parserDTOListToEntityListTest() {
-		List<Person> outputList = parseListObjects(inputObject.mockDTOList(), Person.class);
-		Person outputZero = outputList.getFirst();
+    @Test
+    public void parserDTOListToEntityListTest() {
+        List<Person> outputList = parseListObjects(inputObject.mockDTOList(), Person.class);
+        Person outputZero = outputList.get(0);
 
-		assertEquals(Long.valueOf(0L), outputZero.getId());
-		assertEquals("First Name Test0", outputZero.getFirstName());
-		assertEquals("Last Name Test0", outputZero.getLastName());
-		assertEquals("Address Test0", outputZero.getAddress());
-		assertEquals("Male", outputZero.getGender());
+        assertEquals(Long.valueOf(0L), outputZero.getId());
+        assertEquals("First Name Test0", outputZero.getFirstName());
+        assertEquals("Last Name Test0", outputZero.getLastName());
+        assertEquals("Address Test0", outputZero.getAddress());
+        assertEquals("Male", outputZero.getGender());
 
-		Person outputSeven = outputList.get(7);
+        Person outputSeven = outputList.get(7);
 
-		assertEquals(Long.valueOf(7L), outputSeven.getId());
-		assertEquals("First Name Test7", outputSeven.getFirstName());
-		assertEquals("Last Name Test7", outputSeven.getLastName());
-		assertEquals("Address Test7", outputSeven.getAddress());
-		assertEquals("Female", outputSeven.getGender());
+        assertEquals(Long.valueOf(7L), outputSeven.getId());
+        assertEquals("First Name Test7", outputSeven.getFirstName());
+        assertEquals("Last Name Test7", outputSeven.getLastName());
+        assertEquals("Address Test7", outputSeven.getAddress());
+        assertEquals("Female", outputSeven.getGender());
 
-		Person outputTwelve = outputList.get(12);
+        Person outputTwelve = outputList.get(12);
 
-		assertEquals(Long.valueOf(12L), outputTwelve.getId());
-		assertEquals("First Name Test12", outputTwelve.getFirstName());
-		assertEquals("Last Name Test12", outputTwelve.getLastName());
-		assertEquals("Address Test12", outputTwelve.getAddress());
-		assertEquals("Male", outputTwelve.getGender());
-	}
+        assertEquals(Long.valueOf(12L), outputTwelve.getId());
+        assertEquals("First Name Test12", outputTwelve.getFirstName());
+        assertEquals("Last Name Test12", outputTwelve.getLastName());
+        assertEquals("Address Test12", outputTwelve.getAddress());
+        assertEquals("Male", outputTwelve.getGender());
+    }
 }
